[gd_scene load_steps=16 format=3 uid="uid://dpplifx0q2qol"]

[ext_resource type="Texture2D" uid="uid://cgdo6v2oy1b2" path="res://Textures/postmaster.png" id="1_dxpu0"]
[ext_resource type="Script" path="res://Scenes/Menus/Level Selection.gd" id="1_pxgj5"]
[ext_resource type="Texture2D" uid="uid://e3kg0ag0f7u2" path="res://Textures/desk.png" id="2_kcbrg"]
[ext_resource type="Texture2D" uid="uid://djpu1os2p1kqv" path="res://Textures/mug.png" id="3_lx2w0"]
[ext_resource type="Theme" uid="uid://cbkk2yn7dbh5n" path="res://Scenes/Menus/Theme.tres" id="4_p3m8o"]
[ext_resource type="PackedScene" uid="uid://bqppsekdj4sp1" path="res://Scenes/Button.tscn" id="5_bepwo"]

[sub_resource type="AtlasTexture" id="AtlasTexture_57sxy"]
atlas = ExtResource("1_dxpu0")
region = Rect2(0, 0, 43, 57)

[sub_resource type="AtlasTexture" id="AtlasTexture_qtabh"]
atlas = ExtResource("1_dxpu0")
region = Rect2(43, 0, 43, 57)

[sub_resource type="SpriteFrames" id="SpriteFrames_s23tj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_57sxy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qtabh")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_wq2on"]
atlas = ExtResource("3_lx2w0")
region = Rect2(0, 0, 15, 19)

[sub_resource type="AtlasTexture" id="AtlasTexture_rg8u3"]
atlas = ExtResource("3_lx2w0")
region = Rect2(15, 0, 15, 19)

[sub_resource type="AtlasTexture" id="AtlasTexture_ou7mb"]
atlas = ExtResource("3_lx2w0")
region = Rect2(30, 0, 15, 19)

[sub_resource type="AtlasTexture" id="AtlasTexture_khugl"]
atlas = ExtResource("3_lx2w0")
region = Rect2(45, 0, 15, 19)

[sub_resource type="SpriteFrames" id="SpriteFrames_xlrt4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wq2on")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rg8u3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ou7mb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_khugl")
}],
"loop": true,
"name": &"default",
"speed": 2.0
}]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_x8jlp"]
content_margin_left = 1.0
content_margin_top = 1.0
content_margin_right = 1.0
content_margin_bottom = 1.0
bg_color = Color(0.0588235, 0.0509804, 0.0666667, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.847059, 0.329412, 0.321569, 1)

[node name="Level Selection" type="Node2D"]
script = ExtResource("1_pxgj5")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 320.0
offset_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.227451, 0.0823529, 0.611765, 1)

[node name="Greg" type="AnimatedSprite2D" parent="."]
position = Vector2(37, 10)
sprite_frames = SubResource("SpriteFrames_s23tj")
frame_progress = 0.734008
centered = false

[node name="Desk" type="Sprite2D" parent="."]
position = Vector2(15, 57)
texture = ExtResource("2_kcbrg")
centered = false

[node name="Mug" type="AnimatedSprite2D" parent="."]
position = Vector2(100, 59)
sprite_frames = SubResource("SpriteFrames_xlrt4")
autoplay = "default"
frame_progress = 0.418726

[node name="Level1" parent="." instance=ExtResource("5_bepwo")]
offset_left = 164.0
offset_top = 13.0
offset_right = 212.0
offset_bottom = 61.0
text = "1"

[node name="Level2" parent="." instance=ExtResource("5_bepwo")]
offset_left = 216.0
offset_top = 13.0
offset_right = 264.0
offset_bottom = 61.0
text = "2"

[node name="Level3" parent="." instance=ExtResource("5_bepwo")]
offset_left = 268.0
offset_top = 13.0
offset_right = 316.0
offset_bottom = 61.0
text = "3"

[node name="Level4" parent="." instance=ExtResource("5_bepwo")]
offset_left = 164.0
offset_top = 65.0
offset_right = 212.0
offset_bottom = 113.0
text = "4"

[node name="Level5" parent="." instance=ExtResource("5_bepwo")]
offset_left = 216.0
offset_top = 65.0
offset_right = 264.0
offset_bottom = 113.0
text = "5"

[node name="Level6" parent="." instance=ExtResource("5_bepwo")]
offset_left = 268.0
offset_top = 65.0
offset_right = 316.0
offset_bottom = 113.0
text = "6"

[node name="Back" parent="." instance=ExtResource("5_bepwo")]
offset_left = 268.0
offset_top = 119.0
offset_right = 316.0
offset_bottom = 167.0

[node name="Start" parent="." instance=ExtResource("5_bepwo")]
offset_left = 164.0
offset_top = 119.0
offset_right = 264.0
offset_bottom = 167.0

[node name="PanelContainer" type="PanelContainer" parent="."]
offset_top = 99.0
offset_right = 158.0
offset_bottom = 180.0
theme = ExtResource("4_p3m8o")
theme_override_styles/panel = SubResource("StyleBoxFlat_x8jlp")

[node name="Speech Label" type="Label" parent="PanelContainer"]
layout_mode = 2
size_flags_vertical = 1
text = "Mornin' Jeej"
autowrap_mode = 3
clip_text = true

[connection signal="pressed" from="Level1" to="." method="_on_level_1_pressed"]
[connection signal="pressed" from="Level2" to="." method="_on_level_2_pressed"]
[connection signal="pressed" from="Level3" to="." method="_on_level_3_pressed"]
[connection signal="pressed" from="Level4" to="." method="_on_level_4_pressed"]
[connection signal="pressed" from="Level5" to="." method="_on_level_5_pressed"]
[connection signal="pressed" from="Level6" to="." method="_on_level_6_pressed"]
